--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@vueuse/core": "^10.4.1",
     "axios": "^1.5.0",
+    "echarts": "^6.0.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
+    "vue-echarts": "^8.0.1",
     "vue-router": "^4.2.4",
     "vue-tsc": "^3.0.8"
   },
